M5-T19.1-E add bounded Binder collection paging